--- a/overlays/prod/be/kustomization.yaml
+++ b/overlays/prod/be/kustomization.yaml
@@ -1,17 +1,18 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: s-top
-bases:
-- ../../../base/be
 resources:
-  - namespace.yaml
-  - secret.yaml
+- namespace.yaml
+- secret.yaml
+- ../../../base/be
 
 patches:
-  - path: domain.json
-    target:
-      kind: Ingress
-      name: Ingress
+- path: domain.json
+  target:
+    kind: Ingress
+    name: Ingress
 images:
+- name: jcy0308/stop
+  newTag: c2d3e03baab65473225defcd912b94473842b6f0
 - name: registry.scg.skku.ac.kr/cs-grad-thesis-be
   newTag: prod0
