--- a/overlays/prod/be/secret.yaml
+++ b/overlays/prod/be/secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: vault-secret
+  name: stop-secret
 type: Opaque
 data:
   DATASOURCE: <path:kv/data/stop-secret#datasource | base64encode>
