--- a/overlays/prod/be/secret.yaml
+++ b/overlays/prod/be/secret.yaml
@@ -4,7 +4,7 @@ metadata:
   name: stop-secret
 type: Opaque
 data:
-  DATASOURCE: <path:kv/data/stop-secret#datasource | base64encode>
+  DATABASE: <path:kv/data/stop-secret#datasource | base64encode>
   USER: <path:kv/data/stop-secret#user | base64encode>
   PASSWORD: <path:kv/data/stop-secret#password | base64encode>
   
