--- a/overlays/prod/fe/kustomization.yaml
+++ b/overlays/prod/fe/kustomization.yaml
@@ -3,9 +3,8 @@ kind: Kustomization
 namespace: s-top
 resources:
 - namespace.yaml
-
-bases:
 - ../../../base/fe
+
 
 patches:
 - path: domain.json
@@ -14,4 +13,4 @@ patches:
     name: fe-ingress
 images:
 - name: scgskku/stop-fe
-  newTag: a
+  newTag: 0aadcac7ea1322879a42e066b3fdf1f77f322bd3
