fix: update frontend ingress path prefix

--- a/base/fe/ingress.yaml
+++ b/base/fe/ingress.yaml
@@ -19,3 +19,5 @@ spec:
                 name: fe-service
                 port:
                   number: 80
+            path: /
+            pathType: Prefix
