--- a/base/fe/deployment.yaml
+++ b/base/fe/deployment.yaml
@@ -5,12 +5,12 @@ metadata:
 spec:
   selector:
     matchLabels:
-      app.kubernetes.io/name: be
+      app.kubernetes.io/name: fe
   replicas: 1
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: be
+        app.kubernetes.io/name: fe
     spec:
       containers:
       - image: scgskku/stop-fe
