--- a/overlays/prod/be/kustomization.yaml
+++ b/overlays/prod/be/kustomization.yaml
@@ -15,4 +15,4 @@ patches:
     name: be-ingress
 images:
 - name: jcy0308/stop
-  newTag: 4e4dba6faa4e357574eb114ead054b055c7596d5
+  newTag: latest
