--- a/base/be/ingress.yaml
+++ b/base/be/ingress.yaml
@@ -19,5 +19,5 @@ spec:
                 name: be-service
                 port:
                   number: 80
-            path: /v1
+            path: /v1(/|$)(.*)
             pathType: Prefix
