--- a/overlays/prod/be/secret.yaml
+++ b/overlays/prod/be/secret.yaml
@@ -8,3 +8,4 @@ data:
   SPRING_DATASOURCE_USERNAME: <path:kv/data/stop-secret#user | base64encode>
   SPRING_DATASOURCE_PASSWORD: <path:kv/data/stop-secret#password | base64encode>
   
+#1/12 secret v4 update
