--- a/overlays/prod/be/secret.yaml
+++ b/overlays/prod/be/secret.yaml
@@ -7,5 +7,20 @@ data:
   SPRING_DATASOURCE_URL: <path:kv/data/stop-secret#datasource | base64encode>
   SPRING_DATASOURCE_USERNAME: <path:kv/data/stop-secret#user | base64encode>
   SPRING_DATASOURCE_PASSWORD: <path:kv/data/stop-secret#password | base64encode>
-  
-#1/12 secret v9 update
+  ##
+  STOP_EMAIL: <path:kv/data/stop-secret#email-username | base64encode>
+  STOP_EMAIL_PASSWORD: <path:kv/data/stop-secret#email-password | base64encode>
+  ADMIN_EMAIL: <path:kv/data/stop-secret#email-admin | base64encode>
+  ##
+  MINIO_URL: <path:kv/data/stop-secret#minio-url | base64encode>
+  MINIO_SECRET: <path:kv/data/stop-secret#minio-secretkey | base64encode>
+  MINIO_BUCKET: <path:kv/data/stop-secret#minio-bucket | base64encode>
+  ##
+  NOTION_SECRET: <path:kv/data/stop-secret#notion-secretkey | base64encode>
+  NOTION_DB_MODEL: <path:kv/data/stop-secret#notion-db-model | base64encode>
+  NOTION_DB_DATASET: <path:kv/data/stop-secret#notion-db-dataset | base64encode>
+  NOTION_DB_JOBINFO: <path:kv/data/stop-secret#notion-db-jobinfo | base64encode>
+  ##
+  OAUTH_CLIENT_ID: <path:kv/data/stop-secret#oauth-client-id | base64encode>
+  OAUTH_REDIRECT_URI: <path:kv/data/stop-secret#oauth-redirect-uri | base64encode>
+#1/12 secret v12 update
