--- a/overlays/prod/fe/kustomization.yaml
+++ b/overlays/prod/fe/kustomization.yaml
@@ -1,8 +1,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: s-top
-bases:
+resources:
 - ../../../base/fe
+- secret.yaml
 patches:
 - path: domain.json
   target:
