--- a/base/fe/deployment.yaml
+++ b/base/fe/deployment.yaml
@@ -20,4 +20,4 @@ spec:
         - containerPort: 3000
         envFrom:
         - secretRef:
-            name: stop-secret
+            name: stop-fe-secret
