--- a/overlays/qa/be/secret.yaml
+++ b/overlays/qa/be/secret.yaml
@@ -4,7 +4,7 @@ metadata:
   name: stop-secret
 type: Opaque
 data:
-  SPRING_DATASOURCE_URL: <path:kv/data/stop-secret#datasource-qa | base64encode> #추후 배포버전으로 수정 필요요
+  SPRING_DATASOURCE_URL: <path:kv/data/stop-secret#datasource-qa | base64encode>
   SPRING_DATASOURCE_USERNAME: <path:kv/data/stop-secret#user | base64encode>
   SPRING_DATASOURCE_PASSWORD: <path:kv/data/stop-secret#password | base64encode>
   ##
@@ -24,5 +24,5 @@ data:
   OAUTH_CLIENT_ID: <path:kv/data/stop-secret#oauth-client-id | base64encode>
   OAUTH_REDIRECT_URI: <path:kv/data/stop-secret#oauth-redirect-uri | base64encode>
   ##
-  WEB_REDIRECT_URI: <path:kv/data/stop-secret#web-uri-prod | base64encode>
+  WEB_REDIRECT_URI: <path:kv/data/stop-secret#web-uri-qa | base64encode>
 #2/6 secret v20 update
