--- a/overlays/qa/fe/kustomization.yaml
+++ b/overlays/qa/fe/kustomization.yaml
@@ -1,14 +1,13 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: s-top-prod
-resources:
+namespace: s-top-qa
+bases:
 - ../../../base/fe
-
 patches:
 - path: domain.json
   target:
     kind: Ingress
     name: fe-ingress
 images:
-- name: scgskku/stop-fe-prod
-  newTag: c41ec655a3177ccbc91cf3936c60b8922ea8d54f
+- name: scgskku/stop-fe-qa
+  newTag: 0aadcac7ea1322879a42e066b3fdf1f77f322bd3
