--- a/base/be/deployment.yaml
+++ b/base/be/deployment.yaml
@@ -13,7 +13,7 @@ spec:
         app.kubernetes.io/name: be
     spec:
       containers:
-      - image: jcy0308/stop
+      - image: jcy0308/stop-be
         imagePullPolicy: Always
         name: be
         ports:
