--- a/base/fe/ingress.yaml
+++ b/base/fe/ingress.yaml
@@ -5,9 +5,9 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: 'nginx'
     cert-manager.io/cluster-issuer: 'letsencrypt-clusterissuer'
-    nginx.ingress.kubernetes.io/auth-type: basic
-    nginx.ingress.kubernetes.io/auth-secret: temporal-auth
-    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
+    # nginx.ingress.kubernetes.io/auth-type: basic
+    # nginx.ingress.kubernetes.io/auth-secret: temporal-auth
+    # nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
 spec:
   tls:
     - hosts:
