--- a/overlays/qa/fe/kustomization.yaml
+++ b/overlays/qa/fe/kustomization.yaml
@@ -1,8 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: s-top-qa
-bases:
-- ../../../base/fe
 patches:
 - path: domain.json
   target:
@@ -10,4 +8,6 @@ patches:
     name: fe-ingress
 images:
 - name: scgskku/stop-fe-qa
-  newTag: 0aadcac7ea1322879a42e066b3fdf1f77f322bd3
+  newTag: 1b5de7e3e6a3ca916cb88da61ce68a4d3fd05145
+resources:
+- ../../../base/fe
