fix: 이미지 덮어쓰기 수정정

--- a/overlays/prod/be/kustomization.yaml
+++ b/overlays/prod/be/kustomization.yaml
@@ -13,5 +13,6 @@ patches:
     kind: Ingress
     name: be-ingress
 images:
-- name: jcy0308/stop-be-prod
+- name: jcy0308/stop-be
+  newName: jcy0308/stop-be-prod
   newTag: 386941e3e2c79803ef4de41746aeb227e2215cb1
