--- a/overlays/prod/fe/kustomization.yaml
+++ b/overlays/prod/fe/kustomization.yaml
@@ -10,5 +10,6 @@ patches:
     kind: Ingress
     name: fe-ingress
 images:
-- name: scgskku/stop-fe-prod
+- name: scgskku/stop-fe
+  newName: scgskku/stop-fe-prod
   newTag: df69d72b003398a55dbc3817aee1b5e8f5c04d43
