--- a/overlays/qa/fe/kustomization.yaml
+++ b/overlays/qa/fe/kustomization.yaml
@@ -7,7 +7,8 @@ patches:
     kind: Ingress
     name: fe-ingress
 images:
-- name: scgskku/stop-fe-qa
+- name: scgskku/stop-fe
+  newName: scgskku/stop-fe-prod
   newTag: 9567238235f3ddf2bcc2eaa063f6974117318b43
 resources:
 - ../../../base/fe
