--- a/overlays/qa/fe/kustomization.yaml
+++ b/overlays/qa/fe/kustomization.yaml
@@ -8,7 +8,7 @@ patches:
     name: fe-ingress
 images:
 - name: scgskku/stop-fe
-  newName: scgskku/stop-fe-prod
+  newName: scgskku/stop-fe-qa
   newTag: 9567238235f3ddf2bcc2eaa063f6974117318b43
 resources:
 - ../../../base/fe
