Update image tag

--- a/overlays/prod/fe/kustomization.yaml
+++ b/overlays/prod/fe/kustomization.yaml
@@ -13,3 +13,5 @@ images:
 - name: scgskku/stop-fe
   newName: scgskku/stop-fe-prod
   newTag: df69d72b003398a55dbc3817aee1b5e8f5c04d43
+- name: scgskku/stop-fe-prod
+  newTag: df69d72b003398a55dbc3817aee1b5e8f5c04d43
