--- a/overlays/qa/fe/kustomization.yaml
+++ b/overlays/qa/fe/kustomization.yaml
@@ -10,5 +10,7 @@ images:
 - name: scgskku/stop-fe
   newName: scgskku/stop-fe-qa
   newTag: 9567238235f3ddf2bcc2eaa063f6974117318b43
+- name: scgskku/stop-fe-qa
+  newTag: 9567238235f3ddf2bcc2eaa063f6974117318b43
 resources:
 - ../../../base/fe
