--- a/overlays/prod/be/secret.yaml
+++ b/overlays/prod/be/secret.yaml
@@ -4,9 +4,9 @@ metadata:
   name: stop-secret
 type: Opaque
 data:
-  SPRING_DATASOURCE_URL: <path:kv/data/stop-secret#datasource-qa | base64encode> #추후 배포버전으로 수정 필요요
-  SPRING_DATASOURCE_USERNAME: <path:kv/data/stop-secret#user | base64encode>
-  SPRING_DATASOURCE_PASSWORD: <path:kv/data/stop-secret#password | base64encode>
+  SPRING_DATASOURCE_URL: <path:kv/data/stop-secret#datasource-prod | base64encode> 
+  SPRING_DATASOURCE_USERNAME: <path:kv/data/stop-secret#db-user-prod | base64encode>
+  SPRING_DATASOURCE_PASSWORD: <path:kv/data/stop-secret#db-password-prod | base64encode>
   ##
   STOP_EMAIL: <path:kv/data/stop-secret#email-username | base64encode>
   STOP_EMAIL_PASSWORD: <path:kv/data/stop-secret#email-password | base64encode>
@@ -25,4 +25,4 @@ data:
   OAUTH_REDIRECT_URI: <path:kv/data/stop-secret#oauth-redirect-uri-prod | base64encode>
   ##
   WEB_REDIRECT_URI: <path:kv/data/stop-secret#web-uri-prod | base64encode>
-#2/6 secret v20 update
+#2/7 secret v21 update
