--- a/overlays/qa/be/secret.yaml
+++ b/overlays/qa/be/secret.yaml
@@ -5,8 +5,8 @@ metadata:
 type: Opaque
 data:
   SPRING_DATASOURCE_URL: <path:kv/data/stop-secret#datasource-qa | base64encode>
-  SPRING_DATASOURCE_USERNAME: <path:kv/data/stop-secret#user | base64encode>
-  SPRING_DATASOURCE_PASSWORD: <path:kv/data/stop-secret#password | base64encode>
+  SPRING_DATASOURCE_USERNAME: <path:kv/data/stop-secret#db-user-qa | base64encode>
+  SPRING_DATASOURCE_PASSWORD: <path:kv/data/stop-secret#db-password-qa | base64encode>
   ##
   STOP_EMAIL: <path:kv/data/stop-secret#email-username | base64encode>
   STOP_EMAIL_PASSWORD: <path:kv/data/stop-secret#email-password | base64encode>
@@ -25,4 +25,4 @@ data:
   OAUTH_REDIRECT_URI: <path:kv/data/stop-secret#oauth-redirect-uri-qa | base64encode>
   ##
   WEB_REDIRECT_URI: <path:kv/data/stop-secret#web-uri-qa | base64encode>
-#2/6 secret v20 update
+#2/7 secret v21 update
