fix: name error

--- a/overlays/qa/be/secret.yaml
+++ b/overlays/qa/be/secret.yaml
@@ -5,8 +5,8 @@ metadata:
 type: Opaque
 data:
   SPRING_DATASOURCE_URL: <path:kv/data/stop-secret#datasource-qa | base64encode>
-  SPRING_DATASOURCE_USERNAME: <path:kv/data/stop-secret#db-user-qa | base64encode>
-  SPRING_DATASOURCE_PASSWORD: <path:kv/data/stop-secret#db-password-qa | base64encode>
+  SPRING_DATASOURCE_USERNAME: <path:kv/data/stop-secret#db-user-dev | base64encode>
+  SPRING_DATASOURCE_PASSWORD: <path:kv/data/stop-secret#db-password-dev | base64encode>
   ##
   STOP_EMAIL: <path:kv/data/stop-secret#email-username | base64encode>
   STOP_EMAIL_PASSWORD: <path:kv/data/stop-secret#email-password | base64encode>
