--- a/overlays/qa/fe/kustomization.yaml
+++ b/overlays/qa/fe/kustomization.yaml
@@ -11,6 +11,6 @@ images:
   newName: scgskku/stop-fe-qa
   newTag: 9567238235f3ddf2bcc2eaa063f6974117318b43
 - name: scgskku/stop-fe-qa
-  newTag: a6830bc7ecaf7fdef17cd0ee277886f0f2c4c591-47
+  newTag: c1e6187668003cf7099fb289b9e923e66354a94c-22434321558-1
 resources:
 - ../../../base/fe
